# qwop-python

./: .gitignore  LICENSE  QWOP_BODY_PARTS.md  QWOP_CONSTANTS.md  README.md  collect_demos.py  environment.yml  evaluate.py  main.py  play.py  pyproject.toml  qwop-python.py  requirements-gpu.txt  requirements.txt  test_collision.py  test_controls.py  test_game.py  test_hurdle.py  test_physics.py  train.py  train_simple.py
config/: collect_demos.yml  env.yml  evaluate.yml  play.yml  race.yml  record.yml  spectate.yml  spectate_expert_dqnfd.yml  train_a2c.yml  train_a2c_single.yml  train_dqn.yml  train_dqnfd_stage1.yml  train_dqnfd_stage2.yml  train_dqnfd_stage3.yml  train_ppo.yml  train_ppo_2.yml  train_ppo_3.yml  train_ppo_4.yml  train_ppo_5.yml  train_ppo_6.yml  train_ppo_7.yml  train_ppo_8.yml  train_ppo_8_alternate.yml  train_ppo_single.yml  train_qrdqn.yml  train_qrdqn_proven.yml  train_qrdqn_single.yml  train_qrdqn_wr.yml  train_rppo.yml
doc/: CROSS_ENV_TEST.md  DIAGNOSE_REWARDS_INVESTIGATION.md  IMPLEMENTATION_SUMMARY.md  PARITY_CONSTANTS.md  PARITY_GOLD_TRACE.md  PARITY_SOURCE_OF_TRUTH.md  PYTHON_IMPLEMENTATION_PLAN.md  README.md  README_TRAINING.md  TRAINING_GUIDE.md  gym-migration.md
docs/: EXTRACTION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PYTHON_IMPLEMENTATION_PLAN.md  QWOP_ARCHITECTURE.md  QWOP_COLLISION_SYSTEM.md  QWOP_COMPLETE_DATA_REFERENCE.md  QWOP_FUNCTIONS_EXACT.md  QWOP_JOINTS_EXACT_DATA.md  README_TRAINING.md  TRAINING_GUIDE.md
legacy/: Athletics.html  QWOP.js
qwop_python/: __init__.py  actions.py  collision.py  controls.py  data.py  game.py  (+6 more)
(+88 files in other folders)
